Local Navigation Bar: Update scroll offset to prevent local nav bar overlapping content (#597)
* Local Navigation Bar: Update scroll offset to prevent local nav bar overlapping content

* Use a small offset `scroll-margin-top` for TOC headings

--- a/mu-plugins/blocks/table-of-contents/postcss/style.pcss
+++ b/mu-plugins/blocks/table-of-contents/postcss/style.pcss
@@ -148,6 +148,6 @@
 
 @media (min-width: 890px) {
 	.is-toc-heading {
-		scroll-margin-top: calc(var(--wp--custom--local-navigation-bar--spacing--height) + var(--wp--preset--spacing--20));
+		scroll-margin-top: var(--wp--preset--spacing--20);
 	}
 }
